--- a/index.html
+++ b/index.html
@@ -1,51 +1,299 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>vegy fresh</title>
-    <link rel="stylesheet" href="style.css"/>
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link href=" https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href=" https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+    />
+  </head>
+  <body>
     <section>
-        <div class="top1">
-            <h1>vegy fresh</h1>
-        </div>
+      <div class="top1">
+        <h1>vegy fresh</h1>
+      </div>
     </section>
 
     <section>
-        <div class="top2">
-            <banner>
-                <img src="./banner1.jpeg">
-            </banner>
-
-        </div>
+      <div class="top2">
+        <banner>
+          <img src="./banner1.jpeg" />
+        </banner>
+      </div>
     </section>
 
     <section>
-        <div class="top3">
-            <h4>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo excepturi nihil id quo rem ad a autem vero iure numquam corrupti quis voluptas labore incidunt, inventore ullam similique quas aut?
-            </h4>
-        </div>
+      <div class="top3">
+        <h4>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo
+          excepturi nihil id quo rem ad a autem vero iure numquam corrupti quis
+          voluptas labore incidunt, inventore ullam similique quas aut?
+        </h4>
+      </div>
     </section>
 
     <section>
-        <div class="top4">
-            <i class='bx bxs-truck'></i>
-            <p>fastest delivery</p>
-        </div>
+      <div class="top4">
+        <i class="bx bxs-truck"></i>
+        <p>fastest delivery</p>
+      </div>
     </section>
 
     <section>
-        <div class="ban2">
-            <img src="./banner2.jpeg">
+      <div class="ban2">
+        <img src="./banner2.jpeg" />
+      </div>
+    </section>
+
+    <section>
+      <div class="container">
+        <div class="card">
+          <img src="./beetroot.png" alt="" />
+          <div class="text1">
+            <h1>beetroot</h1>
+            <p>23.rs/kg</p>
+            <button>add to cart</button>
           </div>
+        </div>
+
+        <div class="card">
+          <img src="./capsicumgreen.png" alt="" />
+          <div class="text1">
+            <h1>capsicumgreen</h1>
+            <p>23.rs/kg</p>
+            <button>add to cart</button>
+          </div>
+        </div>
+
+        <div class="card">
+            <img src="./capsicumred.png" alt="" />
+            <div class="text1">
+              <h1>capsicumred</h1>
+              <p>23.rs/kg</p>
+              <button>add to cart</button>
+            </div>
+          </div>
+
+      </div>
     </section>
 
+    <section>
+        <div class="container">
+          <div class="card">
+            <img src="./pumpkin.png" alt="" />
+            <div class="text1">
+              <h1>pumpkin</h1>
+              <p>23.rs/kg</p>
+              <button>add to cart</button>
+            </div>
+          </div>
+  
+          <div class="card">
+            <img src="./bittergaurd.png" alt="" />
+            <div class="text1">
+              <h1>bittergaurd</h1>
+              <p>23.rs/kg</p>
+              <button>add to cart</button>
+            </div>
+          </div>
+  
+          <div class="card">
+              <img src="./potato.png" alt="" />
+              <div class="text1">
+                <h1>potato</h1>
+                <p>23.rs/kg</p>
+                <button>add to cart</button>
+              </div>
+            </div>
+  
+        </div>
+      </section>
 
-</body>
+
+      <section>
+        <div class="container">
+          <div class="card">
+            <img src="./lemon.png" alt="" />
+            <div class="text1">
+              <h1>lemon</h1>
+              <p>23.rs/kg</p>
+              <button>add to cart</button>
+            </div>
+          </div>
+  
+          <div class="card">
+            <img src="./ladysfinger.png" alt="" />
+            <div class="text1">
+              <h1>ladysfinger</h1>
+              <p>23.rs/kg</p>
+              <button>add to cart</button>
+            </div>
+          </div>
+  
+          <div class="card">
+              <img src="./drumstik.png" alt="" />
+              <div class="text1">
+                <h1>drumstik</h1>
+                <p>23.rs/kg</p>
+                <button>add to cart</button>
+              </div>
+            </div>
+  
+        </div>
+      </section>
+
+      <section>
+        <div class="container">
+          <div class="card">
+            <img src="./bracoli.png" alt="" />
+            <div class="text1">
+              <h1>bracoli</h1>
+              <p>23.rs/kg</p>
+              <button>add to cart</button>
+            </div>
+          </div>
+  
+          <div class="card">
+            <img src="./carrot2.png" alt="" />
+            <div class="text1">
+              <h1>carrot</h1>
+              <p>23.rs/kg</p>
+              <button>add to cart</button>
+            </div>
+          </div>
+  
+          <div class="card">
+              <img src="./lettuce.png" alt="" />
+              <div class="text1">
+                <h1>lettuce</h1>
+                <p>23.rs/kg</p>
+                <button>add to cart</button>
+              </div>
+            </div>
+  
+        </div>
+      </section>
+
+      <section>
+        <div class="container">
+          <div class="card">
+            <img src="./pomogranate.png" alt="" />
+            <div class="text1">
+              <h1>pomogranate</h1>
+              <p>23.rs/kg</p>
+              <button>add to cart</button>
+            </div>
+          </div>
+  
+          <div class="card">
+            <img src="./grape.png" alt="" />
+            <div class="text1">
+              <h1>grape</h1>
+              <p>23.rs/kg</p>
+              <button>add to cart</button>
+            </div>
+          </div>
+  
+          <div class="card">
+              <img src="./watermelon.png" alt="" />
+              <div class="text1">
+                <h1>watermelon</h1>
+                <p>23.rs/kg</p>
+                <button>add to cart</button>
+              </div>
+            </div>
+  
+        </div>
+      </section>
+
+      <section>
+        <div class="container">
+          <div class="card">
+            <img src="./gauva.png" alt="" />
+            <div class="text1">
+              <h1>gauva</h1>
+              <p>23.rs/kg</p>
+              <button>add to cart</button>
+            </div>
+          </div>
+  
+          <div class="card">
+            <img src="./pineapple.png" alt="" />
+            <div class="text1">
+              <h1>pipeapple</h1>
+              <p>23.rs/kg</p>
+              <button>add to cart</button>
+            </div>
+          </div>
+  
+          <div class="card">
+              <img src="./mango2.png" alt="" />
+              <div class="text1">
+                <h1>mango</h1>
+                <p>23.rs/kg</p>
+                <button>add to cart</button>
+              </div>
+            </div>
+  
+        </div>
+      </section>
+
+
+      <section>
+        <div class="container">
+          <div class="card">
+            <img src="./banana.png" alt="" />
+            <div class="text1">
+              <h1>banana</h1>
+              <p>23.rs/kg</p>
+              <button>add to cart</button>
+            </div>
+          </div>
+  
+          <div class="card">
+            <img src="./dragon.png" alt="" />
+            <div class="text1">
+              <h1>dragon</h1>
+              <p>23.rs/kg</p>
+              <button>add to cart</button>
+            </div>
+          </div>
+  
+          <div class="card">
+              <img src="./fig.png" alt="" />
+              <div class="text1">
+                <h1>FIG</h1>
+                <p>23.rs/kg</p>
+                <button>add to cart</button>
+              </div>
+            </div>
+  
+        </div>
+      </section>
+
+      <footer>
+        <section>
+          <div class="ft">
+           <h2>contact</h2>
+           <div class="addr">
+            <p>NO-9,ram street,chennai-92</p>
+            <p>Phone no -044 394839**</p>
+            <p>mail id- vegyfresh01@gmail.com</p>
+           </div>
+           <h2>All Rights Reserved - 2023 - designed by Lokesh </h2>
+          </div>
+
+        </section>
+        
+      </footer>
+
+
+  </body>
 </html>
