--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>vegy fresh</title>
+    <title>rush to fresh</title>
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
@@ -17,7 +17,11 @@
   <body>
     <section>
       <div class="top1">
-        <h1>vegy fresh</h1>
+        <h1>Rush To Fresh</h1>
+        <!-- <div class="top-1">
+          <h6>- Vegetable Mart</h6>
+        </div> -->
+        
       </div>
     </section>
 
