--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>rush to fresh</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="app.css" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
@@ -17,7 +17,7 @@
   <body>
     <section>
       <div class="top1">
-        <h1>Rush To Fresh</h1>
+        <h1>Fresh Mart</h1>
         <!-- <div class="top-1">
           <h6>- Vegetable Mart</h6>
         </div> -->
@@ -285,13 +285,13 @@
       <footer>
         <section>
           <div class="ft">
-           <h2>contact</h2>
+           <h3>contact</h3>
            <div class="addr">
             <p>NO-9,ram street,chennai-92</p>
             <p>Phone no -044 394839**</p>
-            <p>mail id- vegyfresh01@gmail.com</p>
+            <p>mail id- freshmart***@gmail.com</p>
            </div>
-           <h2>All Rights Reserved - 2023 - designed by Lokesh </h2>
+           <h4>All Rights Reserved - 2023 - designed by Lokesh </h4>
           </div>
 
         </section>
